	timeline even if it is not the current timeline.
	(twittering-get-and-render-timeline): switch timeline just after
	requested.
	(twittering-erase-old-statuses): reimplemented.
	(twittering-update-mode-line): use
	`twittering-current-timeline-spec-string'.
	(twittering-add-timeline-history): likewise.
	(twittering-current-timeline): likewise.
	(twittering-goto-next-status): likewise.

2010-02-13  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-mode-init-variables): make local
	variables by using `make-local-variable' in order to initialize
	the variables with the global values when invoking
	`twittering-mode'. You can initialize `twittering-icon-mode',
	`twittering-jojo-mode' and `twittering-scroll-mode' by using
	`setq' in your `.emacs'.

2010-02-12  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el (twittering-format-status): remove a newline
	from `icon-string' that underlies the icon image.
	(twittering-status-format): add a newline to the default value in
	order to keep the interval of displayed tweets.

2010-02-12  Satoshi Yatagawa  <yata_github@y.hauN.org>

	* twittering-mode.el (twittering-get-tweets): Add optional
	argument `since_id'.
	(twittering-get-and-render-timeline): Adjust callers.
	(twittering-get-tweets): Set parameter `since_id' instead of
	`since' because twitter API had dropped support for `since'
	parameter on 2009-04-08.
	(twittering-http-get-default-sentinel): Modify the condition for
	if retrieving statuses is nil.
	(twittering-erase-old-statuses): Don't add parameter `since'.
	(twittering-status-to-status-datum): No longer use
	`twittering-timeline-last-update'.
	(twittering-get-and-render-timeline): Likewise.
	(twittering-timeline-last-update): Delete variable.
	(twittering-local-strftime, twittering-global-strftime): Delete
	functions.
	(twittering-setftime): Delete function.

	* twittering-mode.el (twittering-get-status-from-http-response):
	No longer make a reverse list.